图标背景设置

--- a/src/.vuepress/styles/palette.scss
+++ b/src/.vuepress/styles/palette.scss
@@ -1,1 +1,5 @@
 // you can change colors here
+//$vp-font: 'Georgia, -apple-system, "Nimbus Roman No9 L", "PingFang SC", "Hiragino Sans GB", "Noto Serif SC", "Microsoft Yahei", "WenQuanYi Micro Hei", "ST Heiti", sans-serif';
+$vp-font:'Noto Sans SC';//普通文本上使用的字体
+$vp-font-heading:'Georgia';//标题上使用的字体
+$vp-font-mono:'Noto Sans Mono SC';//代码上使用的字体
