--- a/src/.vuepress/styles/config.scss
+++ b/src/.vuepress/styles/config.scss
@@ -1,2 +1,6 @@
 // you can change config here
+//主题支持的颜色
 $theme-colors: #2196f3, #f26d6d, #bd35a4, #fb9b5f;
+//代码高亮
+// $code-bg-color: #e3b7b7;
+// $code-color: #54e68e;
